--- a/secret-syllabus.css
+++ b/secret-syllabus.css
@@ -1,11 +1,19 @@
 table, th, td {
     border: solid 1px #aaaaaa;
+    background-color: #F5F5F5;
+}
+th {
+    padding-left: 15px;
+}
+tr {
+    text-align: left;
 }
 table {
     margin-bottom: 50px;
     border-collapse: collapse;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: 5px 5px #aaaaaa;
 }
 body {
     background-color: rgb(237, 247, 204);
@@ -16,6 +24,13 @@ td {
 }
 li{
     margin-left: auto;
-    margin-right: auto;
+    margin-right: 3px;
     margin-bottom: 10px;
+}
+a {
+    color: blue;
+    text-decoration: underline;
+}
+a:visited {
+    color: purple;
 }
